webpack UMD > TypeScript UMD

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.js linguist-generated=true
+index.js linguist-generated=true
+dist/*.js linguist-generated=true
+webpack*.js linguist-language=TypeScript
