--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,14 @@
     "noFallthroughCasesInSwitch": true,
 
     "target": "es5",
-    "module": "umd",
+    "module": "es2015",
     "moduleResolution": "node",
+    "sourceMap": true,
+
     "lib": [
       "dom",
       "es5",
       "es2015.promise"
     ]
-  },
-  "files": [
-    "index.ts"
-  ]
+  }
 }
