--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
 
     "lib": [
       "dom",
