--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aspnet-validation",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Enables ASP.NET Core MVC client-side validation, without JQuery!",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/aspnet-validation.js",
+  "types": "./@types/index.d.ts",
   "repository": "https://github.com/ryanelian/aspnet-validation",
   "bugs": {
     "url": "https://github.com/ryanelian/aspnet-validation/issues"
@@ -15,10 +15,8 @@
     "build": "webpack && webpack --config webpack.config.min.js"
   },
   "devDependencies": {
-    "source-map-loader": "^0.2.1",
-    "ts-loader": "^2.3.2",
-    "typescript": "^2.4.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.4.1"
+    "ts-loader": "^3.0.2",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1"
   }
 }
