--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
-    "sourceMap": true,
-    "declaration": true,
+    "noEmit": true,
 
     "lib": [
       "dom",
