--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,24 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     "strictNullChecks": false,
-    "skipLibCheck": true,
     "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "skipLibCheck": true,
     
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
 
+    "noEmit": true,
     "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
-    "noEmit": true,
+    "importHelpers": false,
+    "jsx": "react",
 
     "lib": [
       "dom",
