Enable ES2018 Promise.prototype.finally. Use local TypeScript version.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "lib": [
       "dom",
       "es5",
-      "es2015.promise"
+      "es2015.promise",
+      "es2018.promise"
     ]
   },
   "exclude": [
