--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Ryan Elian",
   "license": "MIT",
   "scripts": {
-    "build": "webpack && webpack --config webpack.config.min.js"
+    "build": "cp src/aspnet-validation.css dist && webpack && webpack --config webpack.config.min.js"
   },
   "devDependencies": {
     "ts-loader": "^5.3.1",
