--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aspnet-client-validation",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "Enables ASP.NET MVC client-side validation, without jQuery!",
   "main": "dist/aspnet-validation.js",
   "style": "dist/aspnet-validation.css",
@@ -13,7 +13,8 @@
   "author": "Ryan Elian, Phil Haack",
   "license": "MIT",
   "scripts": {
-    "build": "mkdir -p dist && cp src/aspnet-validation.css dist && webpack && webpack --config webpack.config.min.js"
+    "build": "cp src/aspnet-validation.css dist && webpack && webpack --config webpack.config.min.js",
+    "build-windows": "copy src\\aspnet-validation.css dist && webpack && webpack --config webpack.config.min.js"
   },
   "devDependencies": {
     "ts-loader": "^5.3.1",
