--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
-dist/**/*.js linguist-generated=true
-webpack*.js linguist-language=TypeScript
+* text=auto eol=lf
+
+*.gif binary
+*.jpg binary
+*.eot binary
+*.woff binary
+*.svg binary
+*.ttf binary
+*.png binary
+*.otf binary
+*.tif binary
