--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ blob/
 mono_crash.*
 
 # Build results
-!src/product/Serious.Razor/wwwroot/dist
+wwwroot/dist
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
